--- a/packages/dart_icu4x/pubspec.yaml
+++ b/packages/dart_icu4x/pubspec.yaml
@@ -4,13 +4,13 @@ version: 0.0.1
 homepage: "https://github.com/unicode-org/gsoc-unicode-app"
 
 environment:
-  sdk: ^3.8.1
+  sdk: ">=3.4.0 <4.0.0"
   flutter: '>=3.3.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_rust_bridge: 2.11.1
+  flutter_rust_bridge: ^2.11.1
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
