Addressed more pr issues

--- a/packages/dart_icu4x/rust/Cargo.toml
+++ b/packages/dart_icu4x/rust/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-flutter_rust_bridge = "^2.11.1"
+flutter_rust_bridge = "=2.11.1"
 icu = "2.0.0"
 icu_casemap = "2.0.0"
 icu_collections = "2.0.0"
